# isafae

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  start_all.sh  start_server.sh
.github/workflows/: ci.yml
app/: main.py
app-server/: package-lock.json  package.json  start_app_server.sh
app-server/src/: app.module.ts  main.ts
app-server/src/sandbox/: sandbox.controller.ts  sandbox.module.ts  sandbox.service.ts
app-server/src/sandbox/dto/: execute-code.dto.ts
app/api/: routes.py
app/models/: schemas.py
app/services/: sandbox.py  session_manager.py
proxy/: README.md  start_proxy.sh
proxy/app/: main.py
proxy/app/models/: schemas.py
proxy/tests/e2e/: test_execution.py
proxy/tests/unit/: test_routes.py  test_sandbox.py  test_session_manager.py
tests/: test_api.py
tests/e2e/: test_execution.py
tests/unit/: test_routes.py  test_sandbox.py  test_session_manager.py
